Bugfix | Set "text-align: left" for blog post h2 elements on Blog page for better mobile view

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -195,6 +195,10 @@ body {
     > li {
         margin-bottom: $spacing-unit;
     }
+
+    h2 {
+        text-align: left;
+    }
 }
 
 .post-meta {
